--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body onload="NextQuestion(0)">
 
     <div class="content">
-        <img src="inages/aju.png" alt="cc" class="photo">
+        <img src="images/aju.png" alt="cc" class="photo">
         <h1>quiz competition</h1>
         <p>test yourself by your thinking ability</p>
-        <img src="inages/coding club logo.jpg" alt="">
+        <img src="images/coding club logo.jpg" alt="">
     </div>
         <main>
             <!-- creating a modal for when quiz ends -->
