some changes made

--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@
 
     <script src="loader.js"></script>
 </body>
+<footer><p>Made By- Isha, Anjali Singh, Washat Parween<br>AJU Coding Club</p></footer>
 </html>
