--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
                     </div>
     
                     <div class="modal-button-container">
-                        <button onclick="closeScoreModal()">Continue</button>
+                        <button onclick="goToFeedback()">Continue</button>
                     </div>
     
                 </div>
@@ -100,4 +100,5 @@
         </main>
         <script src="index1.js"></script>
 </body>
+<footer><p>Made By- Isha, Anjali Singh, Washat Parween<br>AJU Coding Club</p></footer>
 </html>
